Fixed grey background color and overflow on dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ a{
 
 html, body, #root {
   height: 100%;
+  background-color:white;
 }
 
 #root {
